--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
       <p class="dadosconfig1">Desenvolvido por:
         <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Bernardo Barroso,</a>
         <a href="https://github.com/fegaspar0706" target="_blank" rel="noopener noreferrer">Felipe Gaspar,</a>
-        <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Isaque Amancio,</a>
+        <a href="https://github.com/0001141792-arch" target="_blank" rel="noopener noreferrer">Isaque Amancio,</a>
         <a href="https://github.com/Sirplehe" target="_blank" rel="noopener noreferrer">Victor Hugo Rodrigues,</a>
         <a href="https://github.com/0001181015-a11y" target="_blank" rel="noopener noreferrer">Maria Clara Guide,</a>
-        <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Stefane Beatriz</a>
-        e <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Gabriel Marques</a>
+        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Stefane Beatriz</a>
+        e <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Gabriel Marques</a>
       </p>
 
       <p class="dadosconfig1">Link do projeto no GitHub: <a href="https://github.com/0001143306-web/Trontris" target="_blank" rel="noopener noreferrer">Clique aqui!</a></p>
@@ -125,4 +125,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
