--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <canvas id="game" width="300" height="600" aria-label="Área do jogo"></canvas>
         <div id="game-over" aria-hidden="true">
           <h1>GAME OVER</h1>
-          <p>Press <strong>R</strong> para reiniciar</p>
+          <p>Pressione <strong>R</strong> para reiniciar</p>
         </div>
       </div>
 
@@ -125,5 +125,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
