--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
   <!-- ====== TELA INICIAL ====== -->
   <div id="menu-screen" class="screen active">
     <div class="menu-container">
-      <img src="https://i.postimg.cc/cLBm3xvf/trontrislogo.png" class="menu-logo glitch" alt="Trontris Logo">
+      <img src="https://i.postimg.cc/HnsGzH88/LINES-2-removebg-preview.png" class="menu-logo" alt="Trontris Logo">
 
       <div class="menu-buttons">
-        <p>Digite seu nome abaixo:</p>
-        <input type="text" class="btn1" id="nome" required placeholder="Seu nome aqui">
-        <button class="btn" id="play-btn">🎮 JOGAR</button>
-        <button class="btn" id="controls-btn">🕹️ CONTROLES</button>
-        <button class="btn" id="settings-btn">⚙️ CONFIGURAÇÕES</button>
-        <button class="btn" id="ranking-btn">🏆 RANKING</button>
+        <button class="btn" onclick="showScreen('game')">🎮 JOGAR</button>
+        <button class="btn" onclick="showScreen('controls')">🕹️ CONTROLES</button>
+        <button class="btn" onclick="openSettings()">⚙️ CONFIGURAÇÕES</button>
       </div>
     </div>
   </div>
@@ -38,16 +35,7 @@
         <li>⏸ <strong>P</strong> – pausar jogo</li>
         <li>🔁 <strong>R</strong> – reiniciar após “Game Over”</li>
       </ul>
-      <button class="btn" id="controls-back">⬅ VOLTAR</button>
-    </div>
-  </div>
-
-  <!-- ====== TELA DE RANKING ====== -->
-  <div id="ranking-screen" class="screen">
-    <div class="controls-container">
-      <h1>🏆 RANKING</h1>
-      <ol id="ranking-list"></ol>
-      <button class="btnv" id="ranking-back">⬅ VOLTAR</button>
+      <button class="btn" onclick="showScreen('menu')">⬅ VOLTAR</button>
     </div>
   </div>
 
@@ -55,7 +43,7 @@
   <div id="game-screen" class="screen">
     <div class="container">
       <div class="coluna1">
-       <img class="logo glitch" src="https://i.postimg.cc/cLBm3xvf/trontrislogo.png" alt="logo" />
+        <img class="logo" src="https://i.postimg.cc/HnsGzH88/LINES-2-removebg-preview.png" />
         <div class="painel"><h3>LEVEL</h3><p id="level" class="painel-valor">0</p></div>
         <div class="painel"><h3>LINES</h3><p id="lines" class="painel-valor">0</p></div>
         <div class="painel"><h3>SCORE</h3><p id="score" class="painel-valor">000000</p></div>
@@ -63,68 +51,54 @@
       </div>
 
       <div class="coluna2">
-        <canvas id="game" width="300" height="600" aria-label="Área do jogo"></canvas>
-        <div id="game-over" aria-hidden="true">
+        <canvas id="game" width="300" height="600"></canvas>
+        <div id="game-over">
           <h1>GAME OVER</h1>
-          <p>Pressione <strong>R</strong> para reiniciar</p>
+          <p>Press <strong>R</strong> to restart</p>
         </div>
       </div>
 
       <div class="coluna3">
         <h3>NEXT BLOCK</h3>
-        <canvas id="next" width="150" height="150" aria-label="Próximo bloco"></canvas>
-        <button class="btn" id="controls-btn-2">🕹️ CONTROLES</button>
-        <button class="btn" id="settings-btn-2">⚙️ CONFIGURAÇÕES</button>
-        <button class="btn" id="exit-btn">SAIR</button>
-        <h4>Pressione P para pausar o jogo.</h4>
+        <canvas id="next" width="150" height="150"></canvas>
+        <button class="btn" onclick="openSettings()">⚙️ CONFIGURAÇÕES</button>
+        <button class="btn" onclick="showScreen('menu')">SAIR</button>
       </div>
     </div>
   </div>
 
-   <!-- ===== POPUP DE CONFIGURAÇÕES ===== -->
-  <div id="settings-popup" role="dialog" aria-modal="true" aria-hidden="true">
-    <div class="settings-box" role="document">
+  <!-- ===== POPUP DE CONFIGURAÇÕES ===== -->
+  <div id="settings-popup">
+    <div class="settings-box">
       <h2>⚙️ CONFIGURAÇÕES</h2>
       <div class="config-item">
         <label>🎵 Música:</label>
-        <button id="toggle-music">🔊 Ligar</button>
+        <button id="toggle-music" onclick="toggleMusic()">🔊 Ligar</button>
       </div>
       <div class="config-item">
         <label for="volume">🔈 Volume:</label>
-        <input type="range" id="volume" min="0" max="1" step="0.01" value="0.5">
+        <input type="range" id="volume" min="0" max="1" step="0.01" value="0.5" onchange="adjustVolume(this.value)">
       </div>
       <div class="config-item creditos">
         <p>
-          🎶 Música por
-          <a href="https://pixabay.com/users/artur_aravidi_music-37133175/" target="_blank" rel="noopener noreferrer">
+          🎶 <em>Música por</em>
+          <a href="https://pixabay.com/users/artur_aravidi_music-37133175/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=186633" target="_blank">
             Artur Aravidi
           </a> do
-          <a href="https://pixabay.com/music/" target="_blank" rel="noopener noreferrer">Pixabay</a>
+          <a href="https://pixabay.com/music//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=186633" target="_blank">
+            Pixabay
+          </a>
         </p>
       </div>
-      <button class="btn" id="settings-close">Fechar</button>
-
-      <p class="dadosconfig1">Desenvolvido por:
-        <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Bernardo Barroso,</a>
-        <a href="https://github.com/fegaspar0706" target="_blank" rel="noopener noreferrer">Felipe Gaspar,</a>
-        <a href="https://github.com/0001141792-arch" target="_blank" rel="noopener noreferrer">Isaque Amancio,</a>
-        <a href="https://github.com/Sirplehe" target="_blank" rel="noopener noreferrer">Victor Hugo Rodrigues,</a>
-        <a href="https://github.com/0001181015-a11y" target="_blank" rel="noopener noreferrer">Maria Clara Guide,</a>
-        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Stefane Beatriz</a>
-        e <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Gabriel Marques</a>
-      </p>
-
-      <p class="dadosconfig1">Link do projeto no GitHub: <a href="https://github.com/0001143306-web/Trontris" target="_blank" rel="noopener noreferrer">Clique aqui!</a></p>
+      <button class="btn" onclick="closeSettings()">Fechar</button>
     </div>
   </div>
 
+  <!-- ===== ÁUDIO ===== -->
   <audio id="bg-music" loop preload="auto">
-    <source src="audio/dark-synthwave-strange-time-317273.mp3" type="audio/mpeg">
+    <source src="https://cdn.pixabay.com/audio/2024/02/20/audio_186633.mp3" type="audio/mpeg">
   </audio>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
